<resources>
    <string name="app_name">Chess</string>

    <!-- Splash -->
    <string name="splash_max_moves">Max Moves</string>
    <string name="splash_boardSize">BoardSize</string>
    <string name="splash_start_text">Start</string>
    <string name="splash_board_error">Board Size must be  between 6 and 16 dimension</string>
    <string name="splash_moves_error">Max moves must be greater than 0</string>
    <string name="splash_default_move">3</string>
    <string name="splash_default_board_size">6</string>

    <string name="error_not_reached">End position is not reachable for the knight</string>
    <string name="error_steps">The knight can not reach end position in %1$d moves</string>

</resources>